cmake_minimum_required(VERSION 3.1)
project(FS)
aux_source_directory(. DIR_SRCS)
include_directories("include")
if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
  list(REMOVE_ITEM DIR_SRCS "./Interface.cpp")
endif()
find_package(PkgConfig)
  if (PKG_CONFIG_FOUND)
  pkg_check_modules(GTK "fuse3")
endif()
message("Platform:" ${CMAKE_SYSTEM_NAME})
message("Building List:" ${DIR_SRCS})
add_executable(FS ${DIR_SRCS})
target_link_libraries(FS fuse3)
